fix close button gallery not centered

--- a/components/Gallery.module.scss
+++ b/components/Gallery.module.scss
@@ -105,6 +105,7 @@
     top: 3vw;
     display: flex;
     justify-content: center;
+    align-items: center;
     height: 48px;
     width: 48px;
     color: #000;
